--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{site.baseurl}}/"><i class="fa fa-smile-o"></i> {{ site.data.global.title }}</a>
+                <a class="navbar-brand" href="{{site.baseurl}}/">Home</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
