--- a/docs/_includes/homeheader.html
+++ b/docs/_includes/homeheader.html
@@ -57,7 +57,7 @@
     </nav>
  
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron" style="background-image:url(background.jpg);background-position:0px 0px;background-size:400px;">
+    <div class="jumbotron" style="background-image:url(background.jpg);background-position:0px 0px;background-size:400px;margin-top:-20px;">
         <div class="container">
             <h1 style="color:white">{{ site.data.global.title }}</h1>
             <p style="color:black">{{ site.data.global.description }}</p>
