add a style for 'nb' keywords.

--- a/docs/css/syntax.scss
+++ b/docs/css/syntax.scss
@@ -80,8 +80,8 @@
 .highlight .nf {
   color: #5F0281;  
 }
-.highlight .na {
-  color: #268bd2;
+.highlight .na, .highlight .nb {
+  color: #0000ff;
 }
 .highlight .m, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mb, .highlight .mx {
   color: #a31515;
