improve gallery page

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -35,7 +35,10 @@
       $(document).ready(function() {
         $('.datatable').DataTable({
           paging: false,
-          order: []
+          order: [],
+          autoWidth: false,
+          searching: false,
+          info: false
         });
       });
     </script>
